Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ferramenta para alterar o fundo de uma imagem, permitindo upload de arquivos e escolha de cores.">
     <link rel="stylesheet" href="style.css"> 
     <title>Alterar o Fundo da Imagem</title>
 </head>
-
- <header>
-        <img src="./imagem/Camada.png" alt="Logo" width="100" height="100">
+<body>
+    <header>
+        <img src="./imagem/Camada.png" alt="Logo do site" width="100" height="100">
         <h1>Alterar o Fundo da Imagem</h1>
     </header>
 
-<body>
+    <main>
+        <section>
+            <h2>Faça o upload do arquivo</h2>
+            <input type="file" id="upload" accept="image/*" aria-label="Selecionar arquivo de imagem para upload"><br><br>
+        </section>
 
-  <h2>Faça o upload do arquivo</h2>
-  <input type="file" id="upload" accept="image/*"><br><br>
+        <section>
+            <h3>Escolha a cor de fundo</h3>
+            <input type="color" id="bgColor" value="#ffffff" aria-label="Selecionar cor de fundo"><br><br>
+        </section>
 
+        <section>
+            <button onclick="processarImagem()" aria-label="Alterar o fundo da imagem">Alterar Fundo</button>
+        </section>
 
-  <h3>Escolha a cor de fundo:</h3>
-  <input type="color" id="bgColor" value="#ffffff"><br><br>
+        <section id="resultados" style="display: none;">
+            <h4>Nova Imagem:</h4>
+            <img id="imagemOriginal" src="" alt="Imagem Original" style="max-width: 100px;">
+            <canvas id="canvas"></canvas>
+            <br>
+            <a id="downloadLink" download="imagem-final.jpg">Baixar imagem</a>
+        </section>
+    </main>
 
-  <button onclick="processarImagem()">Alterar Fundo</button>
-
-  <br><br>
-  <div Resultados>
-    <h4>Nova Imagem:</h4>
-    <img id="imagemOriginal" src="" alt="Imagem Original" style="max-width: 100px; display:none;">
-    <canvas id="canvas" style="display:none;"></canvas>
-  <br>
-  <a id="downloadLink" style="display:none;" download="imagem-final.jpg">Baixar imagem</a>
-
-  </div>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
